fix(header-nav): text wrapping

--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -15,13 +15,11 @@
   gap: 8px;
   text-decoration: none;
   color: var(--kd-color-text-level-primary);
-  white-space: nowrap;
   border-radius: 4px;
   transition: background-color 150ms ease-out, color 150ms ease-out,
     outline-color 150ms ease-out;
   outline: 2px solid transparent;
   outline-offset: -2px;
-  height: 30px;
   padding: 6px 12px 6px 8px;
 
   &.left-padding {
@@ -126,6 +124,7 @@
       padding: 16px;
       background-color: var(--kd-color-background-opacity-1);
       border-radius: 8px;
+      flex-grow: 1;
     }
   }
 
